syntax = "proto3";

package pb;
import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";
import "user.proto";

option go_package = "thread-art-generator/pkg/proto;pb";

message Art {
    // ID is the unique identifier for the art.
    string id = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
    // Title is the art's title.
    string title = 2 [(google.api.field_behavior) = REQUIRED];
    // ImageURL is the art's image URL.
    string image_url = 3;
    // Author is the art's author.
    string author_id = 4 [(google.api.field_behavior) = REQUIRED, (google.api.field_behavior) = INPUT_ONLY];
    // Author is the art's author.
    User author = 5 [(google.api.field_behavior) = OUTPUT_ONLY];
    // CreatedAt is the art's creation time. Output only.
    google.protobuf.Timestamp create_time = 6 [(google.api.field_behavior) = OUTPUT_ONLY];
    // UpdatedAt is the art's last update time.
    google.protobuf.Timestamp update_time = 7  [(google.api.field_behavior) = OUTPUT_ONLY];
}

message CreateArtRequest {
    // Art is the art.
    Art art = 1 [(google.api.field_behavior) = REQUIRED];
}
message CreateArtResponse {
    // Art is the art.
    Art art = 1;
}

message UpdateArtRequest {
    // Art is the art.
    Art art = 1 [(google.api.field_behavior) = REQUIRED];
}
message UpdateArtResponse {
    // Art is the art.
    Art art = 1;
}


message GetArtRequest {
    // ID is the unique identifier for the art.
    string id = 1;
}
message GetArtResponse {
    // Art is the art.
    Art art = 1;
}

message ListArtRequest {
    // PageToken is the page token.
    int32 page_token = 1;
    // PageSize is the page size.
    int32 page_size = 2;
}

message ListArtResponse {
    // Arts is the list of arts.
    repeated Art arts = 1;
    // NextPageToken is the next page token.
    int32 next_page_token = 2;
}

message DeleteArtRequest {
    // ID is the unique identifier for the art.
    string id = 1;
}
message DeleteArtResponse {
    // Art is the art.
    Art art = 1;
}
